Update api Film
